.实现第四种输出，利用hook得到想要的数据，同时利用进程间通信传输数据

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,27 @@
                 android:resource="@xml/c" />
         </service>
 
+        <!--Xposed模块配置-->
+        <meta-data
+            android:name="xposedmodule"
+            android:value="true"
+            />
+
+        <meta-data
+            android:name="xposeddescription"
+            android:value="ClassifyDemo Hook!"
+            />
+
+        <meta-data
+            android:name="xposedminversion"
+            android:value="54"
+            />
+
+        <provider
+            android:exported="true"
+            android:authorities="com.example.admin.classifydemo.provider"
+            android:name=".MyProvider"/>
+
     </application>
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
